# DvtUtil

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
cmake/: headerlist.cmake  sourcelist.cmake
src/C++/: PCH.h  main.cpp
src/C++/Papyrus/: Actor.cpp  Actor.h  ActorValueHelper.h  Experiments.cpp  Experiments.h  Faction.cpp  Faction.h  FormList.cpp  FormList.h  ObjectREFR.cpp  ObjectREFR.h  Race.cpp  Race.h  Registration.cpp  Spell.cpp  Spell.h  String.cpp  String.h  Time.cpp  Time.h
src/Papyrus/: DvtUtil.psc
